# mchat-server

./: CMakeLists.txt  base64.c  base64.h  main.c  main.h  srvclientutils.c  srvclientutils.h  srvcore.c  srvcore.h  srvevents.c  srvevents.h  srvsockutils.c  srvsockutils.h  srvtypes.h  sys_messages.c  sys_messages.h
CMakeModules/: FindJSON.cmake  FindLIBEV.cmake  FindUUID.cmake
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
